@@ -1,5 +1,6 @@
 Changes for 1.6.6
 
+ - [ZBX-854] added support of template triggers for actions (Alexei)
  - [ZBX-916] phrase 'delete selected' replaced by translatable S_DELETE_SELECTED (Alexei)
  - [ZBX-960] fixed confirmation questions in Configuration->Hosts->Host groups (Alexei)
  - [ZBX-975] TRUE/FALSE was replaced to Problems/Ok in Availability Report (Alexei)
